# NeuroAtlasAgent

./: .gitignore  README.md  pyproject.toml
data/: benchmark.jsonl  seed_graph.json
docs/: paper_outline.md  research_protocol.md
outputs/annotation-template/: NeuroAtlasAgent_Annotation_Template_v1.xlsx
scripts/: evaluate.py
src/neuroatlas/: __init__.py  agents.py  api.py  cli.py  graph.py  models.py  service.py
tests/: test_graph.py  test_service.py
tools/: build_annotation_template.mjs
